ajustes no estilo

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                   <h3>Título</h3>
                 </div>
                 <div class="card-body">
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam est minima assumenda a. Dolorem quis explicabo vel itaque eligendi nostrum. Iure veritatis qui neque sit nostrum repellat ea vero quam?Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores beatae sunt quam repellendus illum suscipit adipisci, assumenda neque cum sint consectetur necessitatibus quae alias vel labore nostrum! Ut, adipisci eaque.</p>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam est minima assumenda a. Dolorem quis explicabo vel itaque eligendi nostrum. Iure veritatis qui neque sit nostrum repellat ea vero quam?Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates architecto quis deleniti suscipit sapiente quae molestiae nulla magnam libero dignissimos provident culpa ut repudiandae ipsum iusto deserunt eos, asperiores exercitationem!</p>
                   <button class="btn btn-success">Ver mais</button>
                 </div>
               </div>
