--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
     </header>
 
-    <div class="container">
+    <div class="container" id="contCarrose">
       <div class="carousel slide carousel-fade" id="exemploCarousel" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active ">
